cluster-metal/dpg-datastore/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: http-datastore
  namespace: deeppharmgraph
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: http-gateway
      namespace: kube-system
  hostnames: [dpg-datastore.forging.cc]
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - group: ""
          kind: Service
          name: dpg-datastore-secondary
          port: 80
          weight: 1
